@@ -1236,19 +1236,14 @@ void PrintVLCsatip(std::vector<TChannel>& List) {
  ******************************************************************************/
 
 void PrintInitial(std::vector<TChannel>& List) {
-  auto t = time(nullptr);
-  auto tm = localtime(&t);
-  auto year  = IntToStr(1900 + tm->tm_year, 4, false, '0');
-  auto month = IntToStr(1    + tm->tm_mon , 2, false, '0');
-  auto day   = IntToStr(0    + tm->tm_mday, 2, false, '0');
 
   OutputLine("#------------------------------------------------------------------------------");
   OutputLine("# file automatically generated by w_scan_cpp");
   OutputLine("# https://www.gen2vdr.de/wirbel/w_scan_cpp/index2.html");
   OutputLine("#------------------------------------------------------------------------------");
-  OutputLine("# location and provider: ");
-  OutputLine("# date (yyyy-mm-dd)    : " + year + "-" + month + "-" + day);
-  OutputLine("# provided by (opt)    : --wirbel--\n\n");
+  OutputLine("# location and provider     : ");
+  OutputLine("# date (dd.mm.yyyy HH:MM:SS): " + TimeStr(time(nullptr)));
+  OutputLine("# provided by (opt)         : --wirbel--\n\n");
 
   for(auto c:UniqueTransponders(List)) {
      std::stringstream ss;
